--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
 
   <body>
+    <!-- text fix -->
     <header class="header">
       <div class="header__container container">
         <div class="nav-list">
